test/tests/compiler/5_local_variables/valid/extra_credit/compound_plus.plx
pub fn main(none) i32 {
    to_add: i32 = 0
    to_add += 4
    return to_add
}
